fix(CollectionSidebar): remove request icon and update align for request in collection

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -584,7 +584,7 @@ body {
   padding: 1px 4px;
   border-radius: 2px;
   min-width: 42px;
-  text-align: center;
+  text-align: left;
   margin-right: 2px;
 }
 
